Начал верстку с препроцессором

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,7 +5,16 @@
 
 $color-black: #000000;
 $color-white: #ffffff;
+$color-otherblack: #010000;
+$color-green: #63D1BB;
+$color-brown: #444444;
+$color-grey: #ECECEC;
+$color-othergrey: #F1F1F1;
 $color-transparent: rgba(0, 0, 0, 0);
+
+$bg-color-green: $color-green;
+$bg-color-othergreen: #56C3B2;
+$bg-color-footer: $color-othergrey;
 
 //Font-Family
 //---------------------------------------
