--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,10 +13,18 @@
 @import "global/helpers";
 @import "global/container";
 
-
-// Layout
-
-@import "layout/header";
-@import "layout/footer";
-
-// Blocks
+//Blocks
+@import "blocks/page";
+@import "blocks/page-body";
+@import "blocks/page-header";
+@import "blocks/main-nav";
+@import "blocks/site-list";
+@import "blocks/page-main";
+@import "blocks/product";
+@import "blocks/product-week";
+@import "blocks/about";
+@import "blocks/reviews";
+@import "blocks/contacts";
+@import "blocks/page-footer";
+@import "blocks/catalog-header";
+@import "blocks/catalog";
