Исправил ошибки Тревиса дополнительно

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,22 +6,20 @@
 $color-black: #000000;
 $color-white: #ffffff;
 $color-otherblack: #010000;
-$color-green: #63D1BB;
+$color-green: #63d1bb;
 $color-brown: #444444;
-$color-grey: #ECECEC;
-$color-othergrey: #F1F1F1;
+$color-grey: #ececec;
+$color-othergrey: #f1f1f1;
 $color-transparent: rgba(0, 0, 0, 0);
 
 $bg-color-green: $color-green;
-$bg-color-othergreen: #56C3B2;
+$bg-color-othergreen: #56c3b2;
 $bg-color-footer: $color-othergrey;
 
 //Font-Family
 //---------------------------------------
 
-$font-family--opensans: "Open Sans",
-"Arial",
-sans-serif;
+$font-family--opensans: "Open Sans", "Arial", sans-serif;
 
 //Viewports
 //---------------------------------------
