--- a/source/sass/blocks/product-week.scss
+++ b/source/sass/blocks/product-week.scss
@@ -1,5 +1,5 @@
 .product-week {
-  background-image: url(../../img/bg-zigzag-line.svg);
+  background-image: url("../../img/bg-zigzag-line.svg");
   background-repeat: no-repeat;
   background-position: bottom;
 }
