--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -1,5 +1,5 @@
 .product__header {
-  background-image: url(../../img/hero-mobile@1x.jpg);
+  background-image: url("../../img/hero-mobile@1x.jpg)");
   background-repeat: no-repeat;
 }
 
