--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,5 +26,7 @@
 @import "blocks/reviews";
 @import "blocks/contacts";
 @import "blocks/page-footer";
+@import "blocks/social";
+@import "blocks/copyright";
 @import "blocks/catalog-header";
 @import "blocks/catalog";
