--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,3 +30,6 @@
 @import "blocks/copyright";
 @import "blocks/catalog-header";
 @import "blocks/catalog";
+@import "blocks/production";
+@import "blocks/form-header";
+@import "blocks/form";
