--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -15,6 +15,7 @@ $color-transparent: rgba(0, 0, 0, 0);
 $bg-color-green: $color-green;
 $bg-color-othergreen: #56c3b2;
 $bg-color-footer: $color-othergrey;
+$form-border: #62d1ba;
 
 //Font-Family
 //---------------------------------------
