--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,18 +1,171 @@
 .about__heading {
+  margin: 0;
+
   font-weight: bold;
   font-size: 25px;
   line-height: 30px;
-  margin: 0;
+
+  @include viewport--md {
+    font-size: 43px;
+    line-height: 50px;
+    grid-column: 1 / -1;
+  }
+
+  @include viewport--lg {
+    font-size: 53px;
+    line-height: 57px;
+    grid-column: 2 / -1;
+  }
 }
 
 .about__list {
-  list-style: none;
+  display: grid;
   margin: 0;
   padding: 0;
+
+  list-style: none;
+
+  @include viewport--md {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
+  @include viewport--lg {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
 }
 
 .about__item {
   font-weight: bold;
   font-size: 17px;
   line-height: 20px;
+
+  @include viewport--md {
+    &--flower {
+      grid-column: 1 / 3;
+      grid-row: 2 / 3;
+    }
+
+    &--money {
+      grid-column: 1 / 3;
+      grid-row: 3 / 4;
+    }
+
+    &--heart {
+      grid-column: 1 / 3;
+      grid-row: 4 / 5;
+    }
+
+    &--ball {
+      grid-column: 3 / 5;
+      grid-row: 2 / 3;
+    }
+
+    &--rocket {
+      grid-column: 3 / 5;
+      grid-row: 3 / 4;
+    }
+
+    &--gift {
+      grid-column: 3 / 5;
+      grid-row: 4 / 5;
+    }
+  }
+
+  @include viewport--lg {
+    &--flower {
+      grid-column: 2 / 4;
+      grid-row: 2 / 3;
+    }
+
+    &--money {
+      grid-column: 2 / 4;
+      grid-row: 3 / 4;
+    }
+
+    &--heart {
+      grid-column: 2 / 4;
+      grid-row: 4 / 5;
+    }
+
+    &--ball {
+      grid-column: 4 / 7;
+      grid-row: 2 / 3;
+    }
+
+    &--rocket {
+      grid-column: 4 / 7;
+      grid-row: 3 / 4;
+    }
+
+    &--gift {
+      grid-column: 4 / 7;
+      grid-row: 4 / 5;
+    }
+  }
+
+  &--flower::before {
+    content: "";
+
+    display: block;
+    width: 32px;
+    height: 37px;
+
+    background-image: url("../../img/icon-feature-flower.svg");
+    background-repeat: no-repeat;
+  }
+
+  &--money::before {
+    content: "";
+
+    display: block;
+    width: 47px;
+    height: 27px;
+
+    background-image: url("../../img/icon-feature-money.svg");
+    background-repeat: no-repeat;
+  }
+
+  &--heart::before {
+    content: "";
+
+    display: block;
+    width: 34px;
+    height: 27px;
+
+    background-image: url("../../img/icon-feature-heart.svg");
+    background-repeat: no-repeat;
+  }
+
+  &--ball::before {
+    content: "";
+
+    display: block;
+    width: 35px;
+    height: 34px;
+
+    background-image: url("../../img/icon-feature-ball.svg");
+    background-repeat: no-repeat;
+  }
+
+  &--rocket::before {
+    content: "";
+
+    display: block;
+    width: 55px;
+    height: 23px;
+
+    background-image: url("../../img/icon-feature-rocket.svg");
+    background-repeat: no-repeat;
+  }
+
+  &--gift::before {
+    content: "";
+
+    display: block;
+    width: 33px;
+    height: 32px;
+
+    background-image: url("../../img/icon-feature-gift.svg");
+    background-repeat: no-repeat;
+  }
 }
