--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,16 +1,93 @@
 .form__subtitle {
-  margin: 0;
-
+  margin: 54px 0;
+  padding: 0 30px;
   font-size: 13px;
   color: $color-brown;
+
+  @include viewport--lg {
+    padding: 0 213px;
+  }
+}
+
+.form__body {
+  display: flex;
+  flex-direction: column;
 }
 
 .form__container {
   margin: 0;
-  padding: 0;
-
+  padding: 0 30px;
+  margin-bottom: 60px;
   border: none;
-  border-top: 1px solid $form-border;
+
+  @include viewport--md {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
+  @include viewport--lg {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+
+  /* border-top: 1px solid $form-border; */
+}
+@include viewport--md {
+  .form__container-list--type {
+    grid-column: 2 / 4;
+  }
+
+  .form__container--color {
+    background-color: $color-othergrey;
+  }
+
+  .form__container-list--color {
+    grid-column: 2 / 5;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .form__name--grid {
+    grid-column: 2 / 5;
+  }
+
+  .form__container--contact {
+    background-color: $color-othergrey;
+  }
+
+  .form__tel,
+  .form__email {
+    background-color: $color-othergrey;
+  }
+}
+
+@include viewport--lg {
+  .form__container-list--type {
+    grid-column: 2 / 4;
+  }
+
+  .form__container--color {
+    background-color: $color-othergrey;
+  }
+
+  .form__container-list--color {
+    grid-column: 2 / 7;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .form__name--grid {
+    grid-column: 2 / 6;
+  }
+
+  .form__container--contact {
+    background-color: $color-othergrey;
+  }
+
+  .form__tel,
+  .form__email {
+    background-color: $color-othergrey;
+  }
 }
 
 .form__container-title {
@@ -19,6 +96,12 @@
   line-height: 16px;
   color: $color-green;
   text-transform: uppercase;
+  padding: 0;
+
+  @include viewport--lg {
+    text-align: center;
+    grid-column: 1 / 2;
+  }
 }
 
 .form__container-list {
@@ -29,9 +112,16 @@
 }
 
 .form__name {
+  display: flex;
+  flex-direction: column;
+
   font-weight: bold;
   font-size: 17px;
   line-height: 18px;
+
+  @include viewport--md {
+    flex-direction: row;
+  }
 }
 
 .form__text,
@@ -39,10 +129,15 @@
 .form__email {
   border: none;
   box-shadow: inset 0 -2px 0 $color-black;
+  width: 100%;
 }
 
 .form__extra {
   border: 2px solid $color-brown;
+
+  @include viewport--md {
+    width: 100%;
+  }
 }
 
 .form__note {
@@ -51,4 +146,36 @@
   font-size: 14px;
   line-height: 16px;
   color: $color-brown;
+
+  @include viewport--md {
+    order: 1;
+  }
+
+  @include viewport--md {
+    grid-column: 4 / 6;
+    text-align: right;
+  }
+}
+
+.form__bottom {
+  display: flex;
+  flex-direction: column;
+  padding: 0 30px;
+
+  @include viewport--md {
+    justify-content: space-between;
+    flex-direction: row;
+  }
+
+  @include viewport--lg {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    flex-direction: row;
+  }
+}
+
+.form__button {
+  @include viewport--lg {
+    grid-column: 2 / 4;
+  }
 }
