--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,3 +1,79 @@
 .page-header {
-  margin: 0;
+  position: relative;
+  background-color: $color-white;
+  height: 79px;
+
+  @include viewport--md {
+    height: 89px;
+  }
+}
+/*
+.page-header__top {
+
+  /* box-shadow: 0px 1px 0px $color-grey, inset 0px 1px 0px $color-grey;
+}
+*/
+
+.page-header__logo {
+  background-image: url(../../img/logo-mobile.svg);
+  background-repeat: no-repeat;
+  height: 35px;
+  width: 86px;
+
+  position: absolute;
+  left: 50%;
+  top: 21px;
+  transform: translateX(-50%);
+
+  @include viewport--md {
+    background-image: url(../../img/logo-tablet.svg);
+    position: absolute;
+    top: 23px;
+    left: 50px;
+    transform: none;
+    width: 113.01px;
+    height: 45.96px;
+  }
+
+  @include viewport--lg {
+    background-image: none;
+    left: 50%;
+    top: 9px;
+    width: 149px;
+    height: 72px;
+
+    transform: translateX(-50%);
+  }
+}
+
+.page-header__logo-img {
+  display: none;
+
+  @include viewport--lg {
+    display: block;
+  }
+}
+
+.page-header__toggle {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+
+  span:nth-child(2) {
+    display: none;
+  }
+
+  &--active {
+    span:nth-child(1) {
+      display: none;
+    }
+
+    span:nth-child(2) {
+      display: block;
+    }
+  }
+
+  @include viewport--md {
+    display: none;
+  }
 }
