--- a/source/sass/blocks/product-week.scss
+++ b/source/sass/blocks/product-week.scss
@@ -1,27 +1,115 @@
 .product-week {
+  display: flex;
+  flex-direction: column;
+  padding-top: 31px;
+  padding-bottom: 36px;
+
   background-image: url("../../img/bg-zigzag-line.svg");
   background-repeat: no-repeat;
   background-position: bottom;
+
+  @include viewport--md {
+    display: grid;
+
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  @include viewport--lg {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
 }
 
 .product-week__type {
+  margin: 0;
+
   font-weight: bold;
   font-size: 25px;
   line-height: 30px;
-  margin: 0;
+
+  @include viewport--md {
+    font-size: 43px;
+    line-height: 50px;
+
+    grid-column: 1 / 4;
+  }
+  @include viewport--lg {
+    z-index: 1;
+
+    font-size: 53px;
+    line-height: 57px;
+
+    grid-column: 2 / 5;
+    grid-row: 1 / 2;
+  }
 }
 
 .product-week__title {
-  color: $color-green;
+  margin: 0;
+
   font-weight: bold;
   font-size: 17px;
   line-height: 20px;
+  color: $color-green;
   text-transform: uppercase;
-  margin: 0;
+
+  @include viewport--md {
+    grid-column: 4 / 5;
+  }
+  @include viewport--lg {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
 }
 
 .product-week__description {
   color: $color-brown;
+
+  @include viewport--md {
+    grid-column: 1 / 3;
+  }
+  @include viewport--lg {
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
+  }
+}
+
+.product-week__specification-list {
+  margin-bottom: 28px;
+
+  @include viewport--md {
+    grid-column: 1 / 3;
+  }
+  @include viewport--lg {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+  }
+}
+
+.product-week__picture {
+  display: block;
+  width: 260px;
+  height: 315px;
+  margin: 0 auto;
+
+  background-image: url("../../img/triple-set-mobile@1x.jpg");
+
+  @include viewport--md {
+    width: 333px;
+    height: 404px;
+
+    background-image: url("../../img/triple-set-tablet@1x.jpg");
+
+    grid-column: 3 / 5;
+    grid-row: 2 / 6;
+  }
+  @include viewport--lg {
+    width: 525px;
+    height: 636px;
+
+    background-image: url("../../img/triple-set-desktop@1x.jpg");
+
+    grid-column: 4 / 7;
+    grid-row: 1 / 6;
+  }
 }
 
 .product-week__specification-item {
@@ -30,12 +118,34 @@
 
 .product-week__specification-type,
 .product-week__specification-description {
-  color: $color-brown;
   line-height: 20px;
+  color: $color-brown;
 }
 
 .product-week__price {
-  color: $color-brown;
+  display: block;
+  margin: 25px 0;
+
   font-weight: bold;
   font-size: 17px;
+  text-align: center;
+  color: $color-brown;
+
+  @include viewport--md {
+    grid-column: 1 / 3;
+  }
+  @include viewport--lg {
+    grid-column: 2 / 4;
+    grid-row: 4 / 5;
+  }
+}
+
+.product-week__button {
+  @include viewport--md {
+    grid-column: 1 / 3;
+  }
+  @include viewport--lg {
+    grid-column: 2 / 4;
+    grid-row: 5 / 6;
+  }
 }
