--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -1,24 +1,57 @@
-.product__header {
-  background-image: url("../../img/hero-mobile@1x.jpg)");
+.product {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 506px;
+
+  background-color: #f9f9f9;
+  background-image: url("../../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
+  background-position: top;
+
+  @include viewport--md {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 758px;
+    padding: 0 50px;
+
+    background-image: url("../../img/hero-tablet@1x.jpg");
+  }
+  @include viewport--lg {
+    background-image: url("../../img/hero-desktop@1x.jpg");
+  }
 }
 
 .product__slogan {
-  color: $color-otherblack;
   margin: 0;
+  padding-top: 73px;
+
   font-weight: bold;
   font-size: 27px;
   line-height: 30px;
+  text-align: center;
+  color: $color-otherblack;
 }
 
 .product__list {
-  list-style: none;
   margin: 0;
   padding: 0;
+
+  list-style: none;
+
+  @include viewport--md {
+    display: flex;
+  }
 }
 
 .product__list-item {
   background-color: $bg-color-green;
+
+  @include viewport--md {
+    flex-grow: 1;
+    width: 334px;
+  }
 
   &--othergreen {
     background-color: $bg-color-othergreen;
@@ -26,7 +59,13 @@
 }
 
 .product__list-link {
-  color: $color-white;
+  display: block;
+  height: 103px;
   font-weight: bold;
   font-size: 19px;
+  color: $color-white;
+
+  @include viewport--md {
+    height: 119px;
+  }
 }
