--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -1,5 +1,11 @@
 .container {
   padding: 0 30px;
+  max-width: 1150px;
+  margin: 0 auto;
+
+  &--no-mobile-padding {
+    padding: 0;
+  }
 
   @include viewport--md {
     padding: 0 50px;
