--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,15 +1,71 @@
 .reviews {
-  background-image: url("../../img/bg-zigzag-line.svg");
-  background-repeat: no-repeat;
-  background-position: bottom;
+  @include viewport--md {
+    min-height: 457px;
+    background-image: url("../../img/review@1x.jpg");
+    background-repeat: no-repeat;
+  }
+
+  @include viewport--lg {
+    background-image: none;
+  }
+}
+
+.reviews__inner {
+  @include viewport--md {
+    min-height: 457px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
+  @include viewport--lg {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+
+    background-image: url("../../img/review@1x.jpg");
+    background-repeat: no-repeat;
+  }
 }
 
 .reviews__title {
-  margin: 0;
-
   font-weight: bold;
   font-size: 25px;
   line-height: 30px;
+
+  @include viewport--md {
+    font-size: 43px;
+    line-height: 50px;
+    grid-column: 1 / 3;
+    margin: 82px 0 38px;
+  }
+
+  @include viewport--lg {
+    font-size: 53px;
+    line-height: 57px;
+    grid-column: 2 / 4;
+  }
+}
+
+.reviews__list {
+  @include viewport--md {
+    grid-column: 1 / 5;
+    position: relative;
+  }
+
+  @include viewport--lg {
+    grid-column: 2 / 7;
+  }
+}
+
+.reviews__list-buttons {
+  @include viewport--md {
+    position: absolute;
+    right: 0;
+    bottom: 25px;
+  }
+
+  @include viewport--lg {
+    bottom: 50px;
+  }
 }
 
 .reviews__item {
@@ -17,10 +73,27 @@
 }
 
 .reviews__text {
+  font-size: 15px;
   margin: 0;
 
   line-height: 30px;
   color: $color-brown;
+
+  @include viewport--md {
+    font-size: 17px;
+  }
+}
+
+.reviews__author-info {
+  margin: 20px 0;
+
+  @include viewport--md {
+    margin: 61px 0 0;
+  }
+
+  @include viewport--lg {
+    margin: 44px 0 0;
+  }
 }
 
 .reviews__author-name {
@@ -28,6 +101,10 @@
 
   font-weight: bold;
   font-size: 17px;
+
+  @include viewport--md {
+    font-size: 18px;
+  }
 }
 
 .reviews__author-nickname {
@@ -36,4 +113,22 @@
   font-size: 17px;
   line-height: 30px;
   color: $color-brown;
+
+  @include viewport--md {
+    font-size: 18px;
+  }
+}
+
+.reviews__button {
+  @include viewport--md {
+    grid-column: 3 / 5;
+    grid-row: 1;
+    margin-left: auto;
+    margin-top: 79px;
+  }
+
+  @include viewport--lg {
+    grid-column: 5 / 7;
+    grid-row: 1;
+  }
 }
