--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,5 +1,13 @@
 .catalog {
   padding-top: 30px;
+
+  @include viewport--md {
+    padding-top: 66px;
+  }
+
+  @include viewport--lg {
+    padding-top: 109px;
+  }
 }
 
 .catalog__product-list {
@@ -50,6 +58,10 @@
   /*  Временная высота для выравнивания */
   @include viewport--md {
     min-height: 225px;
+  }
+
+  @include viewport--lg {
+    min-height: 198px;
   }
 }
 
@@ -119,20 +131,37 @@
 }
 
 .catalog__product-name {
-  margin: 28px 28px 17px;
+  margin: 28px 28px 6px;
 
   font-weight: bold;
   font-size: 17px;
   color: $color-black;
+
+  @include viewport--md {
+    font-size: 20px;
+    margin: 28px 32px 6px;
+  }
+
+  @include viewport--lg {
+    margin: 28px 28px 6px;
+  }
 }
 
 .catalog__product-description {
   margin: 0 28px 17px;
-  padding-bottom: 10px;
 
   font-size: 13px;
   line-height: 30px;
   color: $color-brown;
+
+  @include viewport--md {
+    font-size: 15px;
+    margin: 0 32px 17px;
+  }
+
+  @include viewport--lg {
+    margin: 0 28px 0;
+  }
 }
 
 .catalog__product-bottom {
@@ -142,8 +171,20 @@
   padding: 22px 0 26px;
 
   border-top: 1px solid $color-grey;
+
+  @include viewport--md {
+    margin: 0 32px;
+  }
+
+  @include viewport--lg {
+    margin: 0 32px 0 26px;
+  }
 }
 
 .catalog__product-price {
   font-weight: bold;
+
+  @include viewport--md {
+    font-size: 17px;
+  }
 }
