--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -2,4 +2,25 @@
   font-weight: bold;
   font-size: 19px;
   line-height: 18px;
+  height: fit-content;
+  margin-top: auto;
+  margin-bottom: auto;
+  padding-right: 20px;
+
+  @include viewport--md {
+    margin-top: 67px;
+    margin-bottom: 0;
+  }
+}
+
+.copyright__link {
+  height: fit-content;
+  margin-top: 22px;
+  margin-left: 14px;
+
+  @include viewport--md {
+    margin-top: 58px;
+
+    margin-left: 20px;
+  }
 }
