--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -1,15 +1,17 @@
 .product {
-  min-height: 506px;
+  min-height: 489px;
 
   background-color: #f9f9f9;
   background-image: url("../../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: top;
+  background-position: center -17px;
 
   @include viewport--md {
-    min-height: 758px;
-
+    min-height: 746px;
+    display: flex;
+    flex-direction: column;
     background-image: url("../../img/hero-tablet@1x.jpg");
+    background-position: center 0;
   }
 
   @include viewport--lg {
@@ -22,6 +24,25 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  @include viewport--md {
+    width: 100%;
+  }
+}
+
+.product__bottom-img {
+  display: none;
+
+  @include viewport--md {
+    display: block;
+    width: 100%;
+    margin-top: -13px;
+    z-index: 4;
+  }
+
+  @include viewport--lg {
+    margin-top: -17px;
+  }
 }
 
 .product__slogan {
@@ -35,7 +56,15 @@
   color: $color-otherblack;
 
   @include viewport--md {
-    padding: 73px 50px 20px;
+    padding: 157px 50px 20px;
+
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  @include viewport--lg {
+    font-size: 53px;
+    line-height: 57px;
   }
 }
 
@@ -51,6 +80,7 @@
 
 .product__list-item {
   background-color: $bg-color-green;
+  position: relative;
 
   @include viewport--md {
     width: 100%;
@@ -67,9 +97,35 @@
   font-weight: bold;
   font-size: 19px;
   color: $color-white;
-  padding: 0 30px;
+  padding: 25px 10px 14px 30px;
 
   @include viewport--md {
     min-height: 119px;
+    font-size: 20px;
+    line-height: 30px;
+    padding: 27px 19px 17px 37px;
+  }
+}
+
+.product__list-link-interior {
+  position: absolute;
+  right: 36px;
+  bottom: 17px;
+  opacity: 0.5;
+
+  @include viewport--md {
+    bottom: 27px;
+  }
+}
+
+.product__list-link-toy {
+  position: absolute;
+  right: 27px;
+  bottom: 22px;
+  opacity: 0.5;
+
+  @include viewport--md {
+    right: 34px;
+    bottom: 27px;
   }
 }
