--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -31,6 +31,14 @@
 .catalog__product-item {
   margin-bottom: 30px;
 
+  &:hover .catalog__product-about {
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  &:active .catalog__product-about {
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  }
+
   @include viewport--md {
     display: grid;
     margin-bottom: 54px;
@@ -137,6 +145,14 @@
   font-size: 17px;
   color: $color-black;
 
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
   @include viewport--md {
     font-size: 20px;
     margin: 28px 32px 6px;
@@ -186,5 +202,16 @@
 
   @include viewport--md {
     font-size: 17px;
+  }
+}
+
+.catalog__product-tobasket {
+  &:hover .catalog__product-tobasket-img {
+    fill: $color-green;
+  }
+
+  &:active .catalog__product-tobasket-img {
+    opacity: 0.3;
+    fill: $color-green;
   }
 }
