--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -15,6 +15,7 @@
 
 .page-footer__logo {
   display: none;
+  cursor: pointer;
 
   @include viewport--md {
     margin-right: 80px;
@@ -22,6 +23,15 @@
     display: block;
     margin-top: auto;
     margin-bottom: auto;
+  }
+
+  &:hover .page-footer__logo-img {
+    fill: #46c1ae;
+  }
+
+  &:active .page-footer__logo-img {
+    fill: #46c1ae;
+    opacity: 0.3;
   }
 }
 
