Сделал исправления, добавил курсоры для кнопок, доделал состояния focus и active

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -16,5 +16,11 @@
 
   &:active {
     color: rgba($color: $color-white, $alpha: 0.3);
+    background: linear-gradient(0deg, #444444, #444444);
+  }
+
+  &:focus {
+    color: rgba($color: $color-white, $alpha: 0.3);
+    background: linear-gradient(0deg, #444444, #444444);
   }
 }
