--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -17,6 +17,10 @@
   display: none;
   cursor: pointer;
 
+  &--main {
+    pointer-events: none;
+  }
+
   @include viewport--md {
     margin-right: 80px;
 
