Доделал декортавные элементы

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -14,12 +14,12 @@
     background: linear-gradient(0deg, #444444, #444444);
   }
 
-  &:active {
-    color: rgba($color: $color-white, $alpha: 0.3);
+  &:focus {
+    color: $color-white;
     background: linear-gradient(0deg, #444444, #444444);
   }
 
-  &:focus {
+  &:active {
     color: rgba($color: $color-white, $alpha: 0.3);
     background: linear-gradient(0deg, #444444, #444444);
   }
