--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,6 +1,9 @@
 .reviews {
+  padding-bottom: 44px;
+
   @include viewport--md {
     min-height: 457px;
+    padding-bottom: 69px;
     background-image: url("../../img/review@1x.jpg");
     background-repeat: no-repeat;
   }
@@ -11,10 +14,16 @@
 }
 
 .reviews__inner {
+  width: 260px;
+  margin: 0 auto;
+
   @include viewport--md {
+    width: auto;
+    margin: 0;
     min-height: 457px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 173px 1fr;
   }
 
   @include viewport--lg {
@@ -27,6 +36,7 @@
 }
 
 .reviews__title {
+  margin: 21px 0 15px;
   font-weight: bold;
   font-size: 25px;
   line-height: 30px;
@@ -35,13 +45,14 @@
     font-size: 43px;
     line-height: 50px;
     grid-column: 1 / 3;
-    margin: 82px 0 38px;
+    margin: 84px 0 0;
   }
 
   @include viewport--lg {
     font-size: 53px;
     line-height: 57px;
     grid-column: 2 / 4;
+    margin: 80px 0 0;
   }
 }
 
@@ -56,23 +67,12 @@
   }
 }
 
-.reviews__list-buttons {
-  @include viewport--md {
-    position: absolute;
-    right: 0;
-    bottom: 25px;
-  }
-
-  @include viewport--lg {
-    bottom: 50px;
-  }
-}
-
 .reviews__item {
   margin: 0;
 }
 
 .reviews__text {
+  width: 243px;
   font-size: 15px;
   margin: 0;
 
@@ -81,11 +81,16 @@
 
   @include viewport--md {
     font-size: 17px;
+    width: 657px;
+  }
+
+  @include viewport--lg {
+    width: 868px;
   }
 }
 
 .reviews__author-info {
-  margin: 20px 0;
+  margin: 35px 0 27px;
 
   @include viewport--md {
     margin: 61px 0 0;
@@ -109,6 +114,7 @@
 
 .reviews__author-nickname {
   margin: 0;
+  margin-top: 3px;
 
   font-size: 17px;
   line-height: 30px;
@@ -119,12 +125,91 @@
   }
 }
 
+.reviews__list-buttons {
+  display: flex;
+  border: 1px solid $color-grey;
+  height: 52px;
+
+  @include viewport--md {
+    border: none;
+    position: absolute;
+    right: 20px;
+    bottom: 49px;
+  }
+
+  @include viewport--lg {
+    bottom: 97px;
+  }
+}
+
+.reviews__button-prev {
+  background-color: $color-transparent;
+  padding: 0;
+  margin: 0;
+  border: none;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  &:hover svg {
+    opacity: 0.6;
+  }
+
+  &:focus svg {
+    opacity: 0.6;
+  }
+
+  &:active svg {
+    opacity: 0.3;
+  }
+}
+
+.reviews__button-next {
+  background-color: $color-transparent;
+  padding: 0;
+  margin: 0;
+  border: none;
+  border-left: 1px solid $color-grey;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  @include viewport--md {
+    border-left: none;
+    margin-left: 36px;
+  }
+
+  &:hover svg {
+    opacity: 0.6;
+  }
+
+  &:focus svg {
+    opacity: 0.6;
+  }
+
+  &:active svg {
+    opacity: 0.3;
+  }
+}
+
 .reviews__button {
+  margin-top: 39px;
+  padding: 14px;
+  min-width: 260px;
+  display: block;
+  text-align: center;
+
   @include viewport--md {
     grid-column: 3 / 5;
     grid-row: 1;
     margin-left: auto;
     margin-top: 79px;
+    margin-bottom: auto;
+    min-width: 175px;
   }
 
   @include viewport--lg {
